# hold-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: SETUP.md
rookiecard/: config.py
rookiecard/agents/: base.py  config.py  hold.py
rookiecard/db/: connection.py  migrate.py
rookiecard/engine/: price_analyzer.py
rookiecard/mcp/: app.py  server.py
rookiecard/mcp/tools/: portfolio.py  prices.py
rookiecard/prompts/: hold.md
rookiecard/scrapers/: ebay.py
